<resources>
    <string name="app_name">MikesFitnessApp</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="stretches">Stretches</string>
    <string name="saveWorkout">Save Workout</string>

    <string name="_4_sets_of_incline_dumbbell_press_8_10_reps">4 sets of incline dumbbell press 8-15 reps</string>
    <string name="kg_reps">kg * reps</string>
    <string name="chest_bicep">Chest + Biceps</string>
    <string name="legs">Legs</string>
    <string name="mikes_fitness_logo_white_dumbbell_to_the_left">Mikes Fitness Logo, white dumbbell to the left</string>
    <string name="_3_sets_of_dumbbell_bench_press_8_15_reps">3 sets of dumbbell bench press, 8-15 reps</string>
    <string name="_3_sets_of_incline_flies_8_15_reps">3 sets of incline flies, 8-15 reps</string>
    <string name="_3_sets_of_chest_dips_until_failure">3 sets of chest dips, until failure</string>
    <string name="_3_sets_of_dumbbell_curls_8_15_reps">3 sets of dumbbell curls, 8-15 reps</string>
    <string name="_3_sets_of_hammer_curls_8_15_reps">3 sets of hammer curls, 8-15 reps</string>
    <string name="_3_sets_of_concentration_curls_8_15_reps">3 sets of concentration curls, 8-15 reps</string>
    <string name="_3_sets_of_db_side_curl_8_15_reps">3 sets of DB Side curl 8–15 reps</string>
    <string name="_3_sets_of_wrist_curls_8_reps">3 sets of Wrist curls 8 reps</string>
    <string name="_60_sit_ups">60 sit-ups</string>
    <string name="complete">Complete?</string>
    <string name="_3_sets_barbell_squat_8_15_reps">3 sets Barbell squat 8-15 reps</string>
    <string name="_3_sets_of_leg_press_8_15_reps">3 sets of leg press 8-15 reps</string>
    <string name="_3_sets_of_leg_extensions_until_failure">3 sets of leg extensions until failure</string>
    <string name="_3_sets_of_leg_curls_8_15_reps">3 sets of leg curls 8-15 reps</string>
    <string name="_4_sets_goblet_squat_8_15_reps">4 sets Goblet Squat 8-15 reps</string>
    <string name="_3_sets_of_lunges_8_15_reps">3 sets of lunges 8-15 reps</string>
    <string name="back">Back</string>
    <string name="_3_sets_of_lat_pull_downs_8_15_reps_wide_grip">3 sets of lat pull downs 8-15 reps Wide Grip</string>
    <string name="_4_sets_of_dumbbell_deadlifts_8_15_reps">4 sets of dumbbell deadlifts 8-15 reps</string>
    <string name="_3_sets_of_bent_over_dumbbell_rows_8_15_reps">3 sets of bent over dumbbell rows 8-15 reps</string>
    <string name="_3_sets_of_one_arm_dumbbell_rows_8_15_reps">3 sets of one arm dumbbell rows 8-15 reps</string>
    <string name="_3_sets_of_row_machine_8_15_reps">3 sets of row machine 8–15 reps</string>
    <string name="_3_sets_of_plate_front_raises_8_15_reps">3 sets of plate front raises 8-15 reps</string>
    <string name="shoulders_triceps">Shoulders + Triceps</string>
    <string name="_4_sets_of_dumbbell_shoulder_press_8_15_reps">4 sets of dumbbell Shoulder press 8-15 reps</string>
    <string name="_3_sets_of_dumbbell_upright_rows_8_15_reps">3 sets of dumbbell upright rows 8-15 reps</string>
    <string name="supersetted_with_lateral_raises_8_15_reps">Supersetted with lateral raises 8-15 reps</string>
    <string name="_3_sets_of_dumbbells_standing_rear_delt_flies_8_15_reps">3 sets of dumbbells standing rear delt flies 8-15 reps</string>
    <string name="_3_sets_dumbbell_floor_press_8_15_reps">3 sets dumbbell floor press 8-15 reps</string>
    <string name="_4_sets_of_triceps_pulldowns_8_15_reps">4 sets of triceps pulldowns 8-15 reps</string>
    <string name="_3_sets_of_dumbbell_overhead_extension_8_15_reps">3 sets of dumbbell overhead extension 8-15 reps</string>
    <string name="_3_sets_of_dumbbell_dead_lifts_8_15_reps">3 sets of dumbbell dead lifts 8-15 reps</string>
    <string name="_3_sets_of_barbell_squats_8_15_reps">3 sets of barbell squats 8-15 reps</string>
    <string name="_3_sets_of_clean_and_jerk_8_15_reps">3 sets of clean and jerk 8-15 reps</string>
    <string name="_3_sets_of_assisted_pullups_8_15_reps">3 sets of assisted pullups 8-15 reps</string>
    <string name="side_plank_3_sets">Side plank 3 sets</string>
    <string name="seconds_each_side">Seconds each side</string>
    <string name="plank_3_sets">Plank 3 sets</string>
    <string name="full_body">Full Body</string>
    <string name="seconds">Seconds</string>
    <string name="lat_pull_down_close_grip">Lat Pull down Close Grip</string>
    <string name="leg_raises_3_sets">Leg raises 3 sets</string>
    <string name="no_of_raises">No. of raises</string>
    <string name="rest_day">Rest Day</string>
    <string name="enjoy_your_day_off_for_now">Enjoy Your Day off... For now!</string>
    <string name="left_for_adding_future_workouts">Left for adding future Workouts</string>
    <string name="shoulder_popping">Shoulder popping:</string>
    <string name="u2022_hang">• Hang</string>
    <string name="u2022_shoulder_wall_press_stretch_4_6_pulses">• Shoulder wall press stretch 4 – 6 pulses</string>
    <string name="u2022_stand_back_to_wall_elbows_pressed_against_wall_flared_raise_arms">• Stand back to wall, elbows pressed against wall flared, raise arms</string>
    <string name="u2022_hands_behind_back_palms_out_push_palms_stretch">• Hands behind back palms out, push palms, stretch</string>
    <string name="u2022_table_stretch">• Table Stretch</string>
    <string name="u2022_swim_forward_stretch_s_grip">• Swim Forward Stretch - S Grip</string>
    <string name="foam_roller">Foam Roller</string>
    <string name="leg_stretches">Leg Stretches</string>
    <string name="round_shoulder">Round Shoulder:</string>
    <string name="u2022_thumbs_should_point_forward_at_rest">• Thumbs should point forward at rest</string>
    <string name="u2022_laying_down_stretch">• Laying down stretch</string>
    <string name="u2022_door_frame_stretch_forearm_backward">• Door frame stretch- forearm backward</string>
    <string name="u2022_doorframe_arm_raise">• Doorframe arm raise</string>
    <string name="u2022_band_pull_apart_turn_thumbs_backward">• Band pull apart – turn thumbs backward.</string>
    <string name="u2022_band_slight_pull_apart_thumbs_backward_raise_both_arms">• Band slight pull apart – thumbs backward, raise both arms</string>
</resources>