<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layerType="hardware"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".Stretches">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/white"
            android:textAlignment="center">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stretches"
                android:textSize="22sp"
                android:textColor="@color/white"/>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/lightBlue"
            android:src="@drawable/mylogo7"
            android:contentDescription="@string/mikes_fitness_logo_white_dumbbell_to_the_left"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/stretchesWO1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/shoulder_popping"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/stretchesWO2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/u2022_hang"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/stretchesWO3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/u2022_shoulder_wall_press_stretch_4_6_pulses"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/stretchesWO4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/u2022_stand_back_to_wall_elbows_pressed_against_wall_flared_raise_arms"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/stretchesWO5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/u2022_hands_behind_back_palms_out_push_palms_stretch"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/stretchesWO6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/u2022_table_stretch"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/stretchesWO65"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/u2022_swim_forward_stretch_s_grip"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/stretchesWO7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/foam_roller"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/stretchesWO8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/leg_stretches"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/stretchesWO9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/round_shoulder"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/stretchesWO11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/u2022_thumbs_should_point_forward_at_rest"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/stretchesWO12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/u2022_laying_down_stretch"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/stretchesWO13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/u2022_door_frame_stretch_forearm_backward"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/stretchesWO14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/u2022_doorframe_arm_raise"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/stretchesWO15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/u2022_band_pull_apart_turn_thumbs_backward"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/stretchesWO16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/u2022_band_slight_pull_apart_thumbs_backward_raise_both_arms"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>



    </LinearLayout>
</ScrollView>