<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layerType="hardware"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".Saturday">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/white"
            android:textAlignment="center">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/rest_day"
                android:textSize="22sp"
                android:textColor="@color/white"/>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/lightBlue"
            android:src="@drawable/mylogo7"
            android:contentDescription="@string/mikes_fitness_logo_white_dumbbell_to_the_left"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/saturdayWO1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/enjoy_your_day_off_for_now"
            android:layout_marginTop="25dp"/>

        <EditText
            android:id="@+id/saturdayWO1Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minLines="1"
            android:maxLines="1"
            android:backgroundTint="@color/darkBlue"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="text"
            android:hint="@string/left_for_adding_future_workouts"
            android:importantForAutofill="no"
            android:textColorHint="@color/darkGrey"
            android:text=""
            android:textColor="@color/black" />


        <Button
            android:id="@+id/saturdaySave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkBlue"
            android:textColor="@color/white"
            android:text="@string/saveWorkout" />
    </LinearLayout>
</ScrollView>